--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,25 @@
 html {
-  color-scheme: light dark;
+  /* color-scheme: light dark;
   font-family: system-ui;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 100%; */
+}
+
+.btn-mais-acoes {
+  background-color: transparent;
+  border: none;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  border-radius: 5px;
+}
+
+.btn-mais-acoes:hover {
+  background-color: #f5f5f5;
+}
+
+svg {
+  vertical-align: initial !important;
 }
